--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="ihu! Ofertas - O melhor lugar para ofertas, promoções e cupons de desconto!">
     <meta property="og:title" content="ihu! Ofertas">
     <meta property="og:description" content="Promoções, cupons e as melhores ofertas!">
-    <title>ihu! Ofertas - Links</title>
+    <title>Ihu! Ofertas - Links</title>
     
     <style>
         * {
@@ -17,7 +17,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #A116F2 0%, #4D16F2 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -86,7 +86,7 @@
         .subtitle {
             font-size: 16px;
             color: #666;
-            line-height: 1.5;
+            line-height: 1.4;
             margin-bottom: 32px;
         }
 
@@ -300,7 +300,7 @@
             <a href="https://chat.whatsapp.com/seu-link-aqui" class="link-button whatsapp" target="_blank" rel="noopener">
                 <div class="link-icon">💬</div>
                 <div class="link-content">
-                    <div class="link-title">Whatsapp | CANAL DE OFERTAS</div>
+                    <div class="link-title">Whatsapp | Canal de Ofertas</div>
                     <div class="link-description">Receba ofertas exclusivas primeiro!</div>
                 </div>
             </a>
@@ -309,7 +309,6 @@
                 <div class="link-icon">📌</div>
                 <div class="link-content">
                     <div class="link-title">Pinterest</div>
-                    <div class="link-description">Inspiração e ofertas incríveis</div>
                 </div>
             </a>
 
@@ -317,14 +316,13 @@
                 <div class="link-icon">📸</div>
                 <div class="link-content">
                     <div class="link-title">Instagram</div>
-                    <div class="link-description">Ofertas diárias e promoções</div>
                 </div>
             </a>
         </div>
 
         <div class="footer">
-            <p class="footer-text">Junte-se a ihuofertas no Linktree</p>
-            <div class="footer-logo">ihu!</div>
+            <p class="footer-text">Faça parte dessa família!</p>
+            <div class="footer-logo">Ihu!</div>
         </div>
     </div>
 </body>
