--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #A116F2 0%, #4D16F2 100%);
+            background: linear-gradient(135deg, #CC73FF 0%, #5B25FF 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -64,7 +64,7 @@
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
             margin-bottom: 16px;
-            animation: pulse 2s ease-in-out infinite;
+            animation: pulse 3s ease-in-out infinite;
         }
 
         @keyframes pulse {
