--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         .logo-container {
             text-align: center;
             margin-bottom: 24px;
+			max-width: 400px
         }
 
         .logo {
@@ -241,14 +242,14 @@
 
         .footer-text {
             font-size: 14px;
-            color: #999;
+            color: #888;
             margin-bottom: 8px;
         }
 
         .footer-logo {
             font-size: 24px;
             font-weight: 900;
-            background: linear-gradient(135deg, #F3E217 0%, #F3D217 100%);
+            background: black;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -287,8 +288,7 @@
             <img src="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihu-logo.jpg" alt="Ihu! Logo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 16px;">
             <h1>Ihu! Ofertas</h1>
             <p class="subtitle">
-                Pode comemorar 🥳! O melhor lugar para ofertas,<br>
-                promoções, cupons de desconto e muito mais 🤩!
+                Pode comemorar 🥳!<br/>Você está no melhor lugar para ofertas, promoções e cupons dos seus produtos favoritos 🤩!
             </p>
         </div>
 
