--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         .logo-container {
             text-align: center;
             margin-bottom: 24px;
-			max-width: 400px
         }
 
         .logo {
@@ -288,7 +287,7 @@
             <img src="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihu-logo.jpg" alt="Ihu! Logo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 16px;">
             <h1>Ihu! Ofertas</h1>
             <p class="subtitle">
-                Pode comemorar 🥳!<br/>Você está no melhor lugar para ofertas, promoções e cupons dos seus produtos favoritos 🤩!
+                Pode comemorar 🥳!<br/>Você está no melhor lugar para ECONOMIZAR! Ofertas, promoções e cupons dos seus produtos favoritos 🤩!
             </p>
         </div>
 
