--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         .footer-logo {
             font-size: 24px;
             font-weight: 900;
-            background: black;
+            background: ‎#1a1a1a‎;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
