--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <img src="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihu-logo.jpg" alt="Ihu! Logo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 16px;">
             <h1>Ihu! Ofertas</h1>
             <p class="subtitle">
-                Pode comemorar 🥳!<br/>Você está no melhor lugar para ECONOMIZAR! Ofertas, promoções e cupons dos seus produtos favoritos 🤩!
+                Pode comemorar 🥳!<br/>Você está no melhor lugar para ECONOMIZAR!<br/>Ofertas, promoções e cupons dos seus produtos favoritos 🤩!
             </p>
         </div>
 
