--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
     <div class="container">
         <div class="logo-container">
             <img src="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihu-logo.jpg" alt="Ihu! Logo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 16px;">
-            <h1>Ihu! Ofertas</h1>
+            <h1>Ihu!</h1>
             <p class="subtitle">
-                Pode comemorar 🥳!<br/>Você está no melhor lugar para ECONOMIZAR!<br/>Ofertas, promoções e cupons dos seus produtos favoritos 🤩!
+                Pode comemorar! 🥳<br/>Você está no melhor lugar para ECONOMIZAR!<br/>Ofertas, promoções e cupons dos seus produtos favoritos! 🤩
             </p>
         </div>
 
