--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/jpg" href="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihu-logo.jpg">
+	<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihu-logo.jpg">
     <meta name="description" content="ihu! Ofertas - O melhor lugar para ofertas, promoções e cupons de desconto!">
     <meta property="og:title" content="ihu! Ofertas">
     <meta property="og:description" content="Promoções, cupons e as melhores ofertas!">
