--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         .footer-logo {
             font-size: 24px;
             font-weight: 900;
-            background: ‎#1a1a1a‎;
+            background-color: ‎#1a1a1a‎;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
