--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         .subtitle {
             font-size: 16px;
-			font-weight: 500;
+			font-weight: 600;
             color: #666;
             line-height: 1.4;
             margin-bottom: 32px;
@@ -235,7 +235,7 @@
         .link-description {
             font-size: 13px;
             color: #666;
-            font-weight: 500;
+            font-weight: 600;
         }
 
         .footer {
@@ -253,8 +253,8 @@
 
         .footer-logo {
             font-size: 24px;
-            font-weight: 900;
-            background: ‎grey‎;
+            font-weight: 700;
+            background: ‎linear-gradient(135deg, #667eea 0%, #764ba2 100%)‎;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
