--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         .subtitle {
             font-size: 16px;
-			font-weight: 600;
+			font-weight: 500;
             color: #666;
             line-height: 1.4;
             margin-bottom: 32px;
@@ -338,6 +338,10 @@
                     <div class="link-title">Instagram</div>
                 </div>
             </a>
+
+			<p>
+				E outros logo mais... 😉
+			</p>
         </div>
 
         <div class="footer">
