--- a/index.html
+++ b/index.html
@@ -260,6 +260,13 @@
             background-clip: text;
         }
 
+		.logo-mais {
+			text-align: center;
+			font-size: 14px;
+			font-weight: 500;
+			color: #777;
+		}
+		
         @media (max-width: 640px) {
             .container {
                 padding: 32px 24px;
@@ -339,7 +346,7 @@
                 </div>
             </a>
 
-			<p>
+			<p class="logo-mais">
 				E outros logo mais... 😉
 			</p>
         </div>
