--- a/index.html
+++ b/index.html
@@ -185,6 +185,15 @@
             border-color: #667eea;
         }
 
+		.link-button.telegram {
+            background: linear-gradient(135deg, #0088cc 0%, #0077b5 100%);
+            border-color: #0088cc;
+        }
+
+        .link-button.telegram:hover {
+            box-shadow: 0 12px 24px rgba(37, 211, 102, 0.3);
+        }
+
         .link-button.whatsapp {
             background: linear-gradient(135deg, #dcf8c6 0%, #e8ffe5 100%);
             border-color: #25D366;
