--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         }
 
 		.link-button.telegram {
-            background: linear-gradient(135deg, #0088cc 0%, #0077b5 100%);
+            background: linear-gradient(135deg, #DAF3FF 0%, #B5F0F2 100%);
             border-color: #0088cc;
         }
 
