--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
             box-shadow: 0 12px 24px rgba(102, 126, 234, 0.3);
             border-color: #667eea;
         }
-
+ 
 		.link-button.telegram {
-            background: linear-gradient(135deg, #DAF3FF 0%, #B5F0F2 100%);
-            border-color: #0088cc;
+            background: linear-gradient(135deg, #0088CC 0%, #68CFEB 100%);
+            border-color: #010012;
         }
 
         .link-button.telegram:hover {
