--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
 
 		.social-icon.telegram {
-   	 		background: linear-gradient(135deg, #0088cc 0%, #0077b5 100%);
+   	 		background: linear-gradient(135deg, #0088cc 0%, #00ADDD 100%);
     		color: white;
 		}
 
