--- a/index.html
+++ b/index.html
@@ -248,14 +248,13 @@
 
         .link-description {
             font-size: 13px;
-            color: #fff;
+            color: #666;
             font-weight: 600;
         }
 
 		.link-title-t {
             font-size: 16px;
             font-weight: 700;
-			color: #fff;
             margin-bottom: 4px;
         }
 
