--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
  
 		.link-button.telegram {
             background: linear-gradient(135deg, #0088CC 0%, #68CFEB 100%);
-            border-color: #010012;
+            border-color: #0088cc;
         }
 
         .link-button.telegram:hover {
