--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 		.link-title-t {
             font-size: 16px;
             font-weight: 700;
+			color: #fff;
             margin-bottom: 4px;
         }
 
