--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         }
 
         .link-button.telegram:hover {
-            box-shadow: 0 12px 24px rgba(37, 211, 102, 0.3);
+            box-shadow: 0 12px 24px rgba(37, 153, 211, 0.3);
         }
 
         .link-button.whatsapp {
@@ -261,7 +261,7 @@
 
         .link-description-t {
             font-size: 13px;
-            color: #fff;
+            color: #1a1a1a;
             font-weight: 600;
         }
 
