--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
         .footer-logo {
             font-size: 24px;
             font-weight: 700;
+			color: #777;
             background: ‎linear-gradient(135deg, #667eea 0%, #764ba2 100%)‎;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
