--- a/index.html
+++ b/index.html
@@ -255,12 +255,13 @@
 		.link-title-t {
             font-size: 16px;
             font-weight: 700;
+			color: #fff;
             margin-bottom: 4px;
         }
 
         .link-description-t {
             font-size: 13px;
-            color: #1a1a1a;
+            color: #fff;
             font-weight: 600;
         }
 
