--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			color: #777;
             background: ‎linear-gradient(135deg, #667eea 0%, #764ba2 100%)‎;
             -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            -webkit-text-fill-color: #777;
             background-clip: text;
         }
 
