--- a/politica-de-privacidade-ihuautomatv2-facebook-app.html
+++ b/politica-de-privacidade-ihuautomatv2-facebook-app.html
@@ -14,6 +14,9 @@
         }
         h1 { color: #333; }
         p { color: #555; }
+        ul { color: #555; }
+        li { color: #555; }
+        ol { color: #555; }
     </style>
 </head>
 <body>
@@ -30,7 +33,7 @@
     </p>
 
     <p>
-        <strong>1. Coleta e Uso de Informações</strong> 
+        <strong>1. Coleta e Uso de Informações</strong><br/>
         O Aplicativo NÃO coleta, armazena, vende ou compartilha quaisquer dados pessoais identificáveis dos seus usuários (como nome, e-mail ou informações de perfil).
         Para seu funcionamento, o Aplicativo acessa apenas as seguintes informações, com a permissão explícita do administrador:</p>
         <ul>
@@ -40,15 +43,15 @@
     </p>
 
     <p>
-        <strong>2. Finalidade do Aplicativo e Uso de Dados</strong> 
+        <strong>2. Finalidade do Aplicativo e Uso de Dados</strong><br/>
         A finalidade deste Aplicativo é permitir ao proprietário da conta enviar e agendar postagens para sua própria conta do Facebook e Instagram; gerar relatórios da própria conta; e gerenciar campanhas de anúncios da própria conta.
     <p>
         
     <p>    
-        <strong>3. Exclusão de Dados e Revogação de Acesso para usuários</strong> 
+        <strong>3. Exclusão de Dados e Revogação de Acesso para usuários</strong><br/>
         Como o Aplicativo não armazena dados de usuários, a "exclusão de dados" refere-se à revogação do acesso do Aplicativo às suas contas de rede social.
-        O administrador pode revogar o acesso do Aplicativo a qualquer momento seguindo estes passos:
-        <h3>Para Facebook e Instagram:</h3>
+        O administrador pode revogar o acesso do Aplicativo a qualquer momento seguindo estes passos:<br/>
+        <strong>Para Facebook e Instagram:</strong>
         <ol>
             <li>Acesse sua conta do Facebook.</li>
             <li>Vá para "Configurações e Privacidade" > "Configurações".</li>
@@ -59,23 +62,23 @@
     </p>
 
     <p>    
-        <strong>4. Armazenamento de Dados</strong> 
+        <strong>4. Armazenamento de Dados</strong><br/>
         Nenhum dado pessoal, informação de perfil ou conteúdo é armazenado em bancos de dados ou servidores pertencentes ou controlados por este Aplicativo.
         Os tokens de autenticação necessários para a comunicação com a API podem ser armazenados localmente no ambiente do usuário (por exemplo, em um arquivo de configuração local ou variável de ambiente) para manter a sessão ativa. Esses tokens não são transmitidos por nós.
     </p>
 
      <p>
-        <strong>5. Segurança</strong> 
+        <strong>5. Segurança</strong><br/>
         O Aplicativo utiliza as práticas de segurança padrão (como conexões HTTPS) para se comunicar com a API, garantindo que os dados em trânsito sejam criptografados.
      </p>
 
      <p>
-        <strong>6. Alterações nesta Política</strong> 
+        <strong>6. Alterações nesta Política</strong><br/>
         Esta Política de Privacidade pode ser atualizada ocasionalmente. Notificaremos sobre quaisquer alterações publicando a nova política nesta página e atualizando a data da "Última atualização"
      </p>
 
     <p>
-        <strong>7. Contato</strong> 
+        <strong>7. Contato</strong><br/>
         Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em contato através do e-mail: ihuofertas@gmail.com
     </p>
 
