--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;600;700;800;900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Modak&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihufavicon.png">
 	<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/ihuofertas/ecommerce-images/refs/heads/main/ihufavicon.png">
     <meta name="description" content="ihu! Ofertas - O melhor lugar para ofertas, promoções e cupons de desconto!">
@@ -282,8 +282,7 @@
         .footer-logo {
 			font-family: Modak, 'Figtree', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             font-size: 24px;
-            font-weight: 700;
-			color: #777;
+			color: #000;
             background: ‎linear-gradient(135deg, #667eea 0%, #764ba2 100%)‎;
             -webkit-background-clip: text;
             -webkit-text-fill-color: #777;
