--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
 			font-family: Modak, 'Figtree', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             font-size: 24px;
 			color: #000;
-            background: ‎linear-gradient(135deg, #667eea 0%, #764ba2 100%)‎;
+            background-color: #000;
             -webkit-background-clip: text;
-            -webkit-text-fill-color: #777;
+            -webkit-text-fill-color: #000;
             background-clip: text;
         }
 
