--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: #000;
             background-clip: text;
+			letter-spacing: 2px;
         }
 
 		.logo-mais {
