--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
         .footer-logo {
 			font-family: Modak, 'Figtree', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             font-size: 24px;
-			color: #000;
-            background-color: #000;
+			color: #1a1a1a;
+            background-color: #1a1a1a;
             -webkit-background-clip: text;
-            -webkit-text-fill-color: #000;
+            -webkit-text-fill-color: #1a1a1a;
             background-clip: text;
 			letter-spacing: 2px;
         }
